testdata/ttcn3-conformance-tests/ATS/core_language/06_types_and_values/0602_structured_types_and_values/060204_enumerated_type_and_values/NegSem_060204_enumerated_type_and_values_013.ttcn
/***************************************************
 ** @author   STF 521
 ** @version  0.0.1
 ** @purpose  1:6.2.4, using enumerated value number integer conversion
 ** @verdict  pass reject
 ***************************************************/

// The following requirement is tested:
// enumerated values with a specific integer value assigned shall not use the associated integer

module NegSem_060204_enumerated_type_and_values_013 {

    type component GeneralComp {
	}

    type enumerated EDays {
        Monday(-1), Tuesday(1), Wednesday(2), Thursday(3), Friday(5)
    };

    testcase TC_NegSem_060204_enumerated_type_and_values_013() runs on GeneralComp {
        var EDays v_enum := Friday(5);    // error: shall not use the associated integer

        if (match(enum2int(v_enum),5)) {
		    setverdict(pass);
        } else {
            setverdict(fail);
        }
	}

	control {
		execute(TC_NegSem_060204_enumerated_type_and_values_013());
	}
}